deploy/retrieveUnpackaged/objects/CustomOpportunityShare__c.object
<CustomObject>
    <description>This is used in the save Manual sharing trigger to remain Manual sharing in it.</description>
    <fields>
        <fullName>AccessLevel__c</fullName>
        <label>AccessLevel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityID__c</fullName>
        <label>OpportunityID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <label>UserID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CustomOpportunityShare</label>
    <nameField>
        <label>CustomOpportunityShare Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomOpportunityShares</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>